@@ -1,8 +1,9 @@
+- edit ||= false
 - collapsed = (@lead.errors.empty? && session[:lead_contact].nil?)
 = subtitle :lead_contact, collapsed, "Contact Information"
 .section
   %small#lead_contact_intro{ hidden_if(!collapsed) }
-    You can add lead contact information later.
+    = "You can add lead contact information later." unless edit
   #lead_contact{ hidden_if(collapsed) }
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
