@@ -3,11 +3,11 @@
     = link_to_close edit_lead_path(@lead)
     = hidden_field_tag "lead[user_id]", @current_user.id
     = f.error_messages
-    = render :partial => "leads/top_section", :locals => { :f => f }
-    = render :partial => "leads/status",      :locals => { :f => f }
-    = render :partial => "leads/contact",     :locals => { :f => f }
-    = render :partial => "leads/web",         :locals => { :f => f }
-    = render :partial => "leads/permissions", :locals => { :f => f }
+    = render :partial => "leads/top_section", :locals => { :f => f, :edit => true }
+    = render :partial => "leads/status",      :locals => { :f => f, :edit => true }
+    = render :partial => "leads/contact",     :locals => { :f => f, :edit => true }
+    = render :partial => "leads/web",         :locals => { :f => f, :edit => true }
+    = render :partial => "leads/permissions", :locals => { :f => f, :edit => true }
     .buttonbar
       = f.submit "Save Lead"
       or
