@@ -1,25 +1,27 @@
-- collapsed = (@lead.errors.empty? && session[:lead_permissions].nil?)
+- edit ||= false
+- collapsed = session[:lead_permissions].nil? # && @lead.errors.empty?
 = subtitle :lead_permissions, collapsed
 .section
   %small#lead_permissions_intro{ hidden_if(!collapsed) }
-    By default permissions will be copied from the campaign or set to private. You can change lead permissions later.
+    = "By default permissions will be copied from the campaign or set to private. You can change lead permissions later." unless edit
   #lead_permissions{ hidden_if(collapsed) }
     .radio_box
-      = radio_button_tag "lead[access]", "Private", @lead.access == "Private", :onclick => "$('people').hide()"
+      = f.radio_button :access, "Private", :onclick => "$('people').hide(); $('lead_access_private').value = 'Private'"
       Keep it private, do not share with others
     .radio_box
-      = radio_button_tag "lead[access]", "Public",  @lead.access == "Public", :onclick => "$('people').hide()"
+      = f.radio_button :access, "Public", :onclick => "$('people').hide(); $('lead_access_public').value = 'Public'"
       Share it with everyone
     .radio_box
-      = radio_button_tag "lead[access]", "Shared",  @lead.access == "Shared", :onclick => "$('people').show()"
+      = f.radio_button :access, "Shared", :onclick => "$('people').show(); $('lead_access_shared').value = 'Shared'"
       Share it with the following people
     #people{ hidden_if(@lead.access != "Shared") }
       %div{ :style => "padding: 6px 0px 0px 20px" }
         - for user in @users
           .check_box
             -# Preserve state of the checkboxes if the form gets redrawn on errors.
-            = check_box_tag "users[]", user.id, params[:users] && params[:users].include?(user.id.to_s)
+            = check_box_tag "users[]", user.id, @lead.permissions.map(&:user_id).include?(user.id) || (params[:users] && params[:users].include?(user.id.to_s))
             = user.full_name
-    .radio_box
-      = radio_button_tag "lead[access]", "Campaign", @lead.access == "Campaign", { :onclick => "$('people').hide()", :disabled => true }
-      %font{ :id => :copy_permissions, :color => :grey } Copy campaign permissions
+    - unless edit
+      .radio_box
+        = f.radio_button :access, "Campaign", :onclick => "$('people').hide(); $('lead_access_campaign').value = 'Campaign'", :disabled => true
+        %font{ :id => :copy_permissions, :color => :grey } Copy campaign permissions
