@@ -1,8 +1,9 @@
+- edit ||= false
 - collapsed = (@lead.errors.empty? && session[:lead_presence].nil?)
 = subtitle :lead_presence, collapsed, "Web Presence"
 .section
   %small#lead_presence_intro{ hidden_if(!collapsed) }
-    You can add web presence information later.
+    = "You can add web presence information later." unless edit
   #lead_presence{ hidden_if(collapsed) }
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
