@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Mon, Mar 30, 2009
+---------------------------------------------------------------------
+- More work on [Edit Lead] form (leads controller and its specs).
+
 Sun, Mar 29, 2009
 ---------------------------------------------------------------------
 - Finished with [Edit Campaign] including controller and view specs.
